General and test Fixes