@@ -1,4 +1,4 @@
-package com.fernandakipper.desafioanotaai.services;
+package com.carlosaguilar.desafioanotaai.services;
 
 import com.carlosaguilar.desafioanotaai.domain.aws.dto.MessageDTO;
 import com.carlosaguilar.desafioanotaai.domain.category.Category;
@@ -16,17 +16,16 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.Optional;
 
-import static com.fernandakipper.desafioanotaai.utils.MockCategories.CATEGORY_ID;
-import static com.fernandakipper.desafioanotaai.utils.MockCategories.DESCRIPTION;
-import static com.fernandakipper.desafioanotaai.utils.MockCategories.OWNER_ID;
-import static com.fernandakipper.desafioanotaai.utils.MockCategories.TITLE;
-import static com.fernandakipper.desafioanotaai.utils.MockCategories.mockCategoryEntity;
-import static com.fernandakipper.desafioanotaai.utils.MockCategories.mockCategoryList;
+import static com.carlosaguilar.desafioanotaai.utils.MockCategories.CATEGORY_ID;
+import static com.carlosaguilar.desafioanotaai.utils.MockCategories.DESCRIPTION;
+import static com.carlosaguilar.desafioanotaai.utils.MockCategories.OWNER_ID;
+import static com.carlosaguilar.desafioanotaai.utils.MockCategories.TITLE;
+import static com.carlosaguilar.desafioanotaai.utils.MockCategories.mockCategoryEntity;
+import static com.carlosaguilar.desafioanotaai.utils.MockCategories.mockCategoryList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.BDDMockito.given;
-import static org.mockito.BDDMockito.then;
+import static org.mockito.BDDMockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class CategoryServiceTest {
@@ -44,18 +43,12 @@ class CategoryServiceTest {
     void insertValidData() {
         final var input = new CategoryDTO("title", "description", "ownerId");
         final var category = new Category(input);
-        given(repository.save(category)).willReturn(category);
+        doReturn(category).when(repository).save(any(Category.class));
 
         final var actual = service.insert(input);
 
         assertEquals(category, actual);
         then(snsService).should().publish(new MessageDTO(category.toString()));
-    }
-
-    @Test
-    void updateNonexistentCategory() {
-        CategoryNotFoundException id = assertThrows(CategoryNotFoundException.class,
-                () -> service.update("id", null));
     }
 
     @Test
@@ -74,9 +67,7 @@ class CategoryServiceTest {
     void deleteError() {
         given(repository.findById(CATEGORY_ID)).willReturn(Optional.empty());
 
-        assertThrows(CategoryNotFoundException.class, () -> {
-            this.service.delete(CATEGORY_ID);
-        });
+        assertThrows(CategoryNotFoundException.class, () -> this.service.delete(CATEGORY_ID));
     }
 
     @Test
@@ -87,9 +78,9 @@ class CategoryServiceTest {
         final var result = this.service.getAll();
 
         assertNotNull(result);
-        assertEquals(result.get(0).getOwnerId(), OWNER_ID);
-        assertEquals(result.get(0).getTitle(), TITLE);
-        assertEquals(result.get(0).getDescription(), DESCRIPTION);
+        assertEquals(result.getFirst().getOwnerId(), OWNER_ID);
+        assertEquals(result.getFirst().getTitle(), TITLE);
+        assertEquals(result.getFirst().getDescription(), DESCRIPTION);
     }
 
     @Test
